test/libyul/yulSyntaxTests/number_literals_2.yul
{
	let x := .1
}
// ----
// ParserError 4828: (12-14): Invalid number literal.
